# python_starter

./: .editorconfig  .flake8  .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml
.opencode/skills/check-repository/: SKILL.md
.opencode/skills/check-repository/scripts/: check_repo.py
src/python_starter/: __init__.py  calculator.py
tests/: test_calculator.py
